--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -97,3 +97,124 @@
     year = {2020},
     bdsk-url-1 = {https://www.mdpi.com/1999-5903/12/11/203},
     bdsk-url-2 = {https://doi.org/10.3390/fi12110203}}
+
+@ARTICLE{casadei22,
+    author       = {Roberto Casadei},
+    title        = {Macroprogramming: Concepts, State of the Art, and Opportunities of
+                  Macroscopic Behaviour Modelling},
+    journal      = {{ACM} Comput. Surv.},
+    volume       = {55},
+    number       = {13s},
+    pages        = {275:1--275:37},
+    year         = {2023},
+    url          = {https://doi.org/10.1145/3579353},
+    doi          = {10.1145/3579353},
+    timestamp    = {Wed, 24 Jan 2024 17:49:04 +0100},
+    biburl       = {https://dblp.org/rec/journals/csur/Casadei23.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{TOCL2019,
+    doi = {10.1145/3285956},
+    url = {https://doi.org/10.1145/3285956},
+    year  = {2019},
+    month = {jan},
+    publisher = {Association for Computing Machinery ({ACM})},
+    volume = {20},
+    number = {1},
+    pages = {1--55},
+    author = {Giorgio Audrito and Mirko Viroli and Ferruccio Damiani and Danilo Pianini and Jacob Beal},
+    title = {A Higher-Order Calculus of Computational Fields},
+    journal = {{ACM} Transactions on Computational Logic}
+}
+
+@article{fcpp,
+    author       = {Giorgio Audrito and
+                  Gianluca Torta},
+    title        = {{FCPP} to aggregate them all},
+    journal      = {Sci. Comput. Program.},
+    volume       = {231},
+    pages        = {103026},
+    year         = {2024},
+    url          = {https://doi.org/10.1016/j.scico.2023.103026},
+    doi          = {10.1016/J.SCICO.2023.103026},
+    timestamp    = {Fri, 27 Oct 2023 20:40:12 +0200},
+    biburl       = {https://dblp.org/rec/journals/scp/AudritoT24.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{scafi,
+    author       = {Roberto Casadei and
+                  Mirko Viroli and
+                  Gianluca Aguzzi and
+                  Danilo Pianini},
+    title        = {ScaFi: {A} Scala {DSL} and Toolkit for Aggregate Programming},
+    journal      = {SoftwareX},
+    volume       = {20},
+    pages        = {101248},
+    year         = {2022},
+    url          = {https://doi.org/10.1016/j.softx.2022.101248},
+    doi          = {10.1016/j.softx.2022.101248},
+    timestamp    = {Fri, 10 Feb 2023 23:34:31 +0100},
+    biburl       = {https://dblp.org/rec/journals/softx/CasadeiVAP22.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{TOMACS2018,
+    doi = {10.1145/3177774},
+    url = {https://doi.org/10.1145/3177774},
+    year  = {2018},
+    month = {mar},
+    publisher = {Association for Computing Machinery ({ACM})},
+    volume = {28},
+    number = {2},
+    pages = {1--28},
+    author = {Mirko Viroli and Giorgio Audrito and Jacob Beal and Ferruccio Damiani and Danilo Pianini},
+    title = {Engineering Resilient Collective Adaptive Systems by Self-Stabilisation},
+    journal = {{ACM} Transactions on Modeling and Computer Simulation}
+}
+
+@inproceedings{PianiniCV22,
+    author       = {Danilo Pianini and
+                  Roberto Casadei and
+                  Mirko Viroli},
+    editor       = {Roberto Casadei and
+                  Elisabetta Di Nitto and
+                  Ilias Gerostathopoulos and
+                  Danilo Pianini and
+                  Ivana Dusparic and
+                  Timothy Wood and
+                  Phyllis R. Nelson and
+                  Evangelos Pournaras and
+                  Nelly Bencomo and
+                  Sebastian G{\"{o}}tz and
+                  Christian Krupitzer and
+                  Claudia Raibulet},
+    title        = {Self-stabilising Priority-Based Multi-Leader Election and Network
+                  Partitioning},
+    booktitle    = {{IEEE} International Conference on Autonomic Computing and Self-Organizing
+                  Systems, {ACSOS} 2022, Virtual, CA, USA, September 19-23, 2022},
+    pages        = {81--90},
+    publisher    = {{IEEE}},
+    year         = {2022},
+    url          = {https://doi.org/10.1109/ACSOS55765.2022.00026},
+    doi          = {10.1109/ACSOS55765.2022.00026},
+    timestamp    = {Wed, 16 Nov 2022 11:08:36 +0100},
+    biburl       = {https://dblp.org/rec/conf/acsos/PianiniCV22.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Dijkstra74,
+    author       = {Edsger W. Dijkstra},
+    title        = {Self-stabilizing Systems in Spite of Distributed Control},
+    journal      = {Commun. {ACM}},
+    volume       = {17},
+    number       = {11},
+    pages        = {643--644},
+    year         = {1974},
+    url          = {https://doi.org/10.1145/361179.361202},
+    doi          = {10.1145/361179.361202},
+    timestamp    = {Wed, 14 Nov 2018 10:22:32 +0100},
+    biburl       = {https://dblp.org/rec/journals/cacm/Dijkstra74.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
